--- a/q6.html
+++ b/q6.html
@@ -41,7 +41,7 @@
                               voluptatum cum maiores<br>
                                      exercitationem.</p>
                         </li>
-                <!-- </div>
+                </div>
                 <div class="feature-list-2">
                     <li class="feature-list-element">
                         <h3>Mobile Applications</h3>
@@ -63,7 +63,7 @@
                               voluptatum cum maiores<br>
                                      exercitationem.</p>
                     </li>   
-                </div>             -->
+                </div>            
             </ul> 
         </div>       
         <div class="section-four">
@@ -86,16 +86,18 @@
                 repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet <br>
                 temporibus quo?</p> 
             </div>
-        </div>    
         </div>  
         <div class="section-six">
-             <div class="web" >
-                <p>Acme Web Solutions</p>
-            </div>
-            <div class="project">
-                <p>Project By</p><p id="p2">Travercy Media</p>
+                <div class="web" >
+                    <p>Acme Web Solutions</p>
+                </div>
+                <div class="project">
+                    <p>Project By Travercy Media</p>
+                </div>
+        </div>
             </div>
         </div>
+         </div>   
         </div>
         </div>
     </div>
