--- a/q6.html
+++ b/q6.html
@@ -89,10 +89,11 @@
         </div>  
         <div class="section-six">
                 <div class="web" >
-                    <p>Acme Web Solutions</p>
+                    <span>Acme Web Solutions</span>
                 </div>
                 <div class="project">
-                    <p>Project By Travercy Media</p>
+                    <span style="color:#ffffff" id="project_feature">Project By</span>
+                     <span style="color:#09026d">Travercy Media</span>
                 </div>
         </div>
             </div>
